--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -70,6 +70,105 @@ picture {
   box-shadow: 0px 0px 10px -1px darken($c-dist, 40%);
 }
 
+.button {
+  padding: 0.75rem 1.25rem;
+  margin-top: 0.5rem;
+
+  border-radius: 2rem;
+  border: 2px solid transparentize($c-main-dark, 0.9);
+
+  background-color: transparentize($c-main-dark, 0.5);
+
+  font-size: $f-size-normal;
+  color: $c-white;
+
+  transition: 0.3s;
+
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+
+  &:hover {
+    background-color: transparentize($c-main-dark, 0.15);
+  }
+
+  &.--main {
+    background-color: transparentize($c-dist, 0.5);
+
+    @include phoneSize {
+      display: flex;
+    }
+
+    &:hover {
+      background-color: transparentize($c-dist, 0.15);
+    }
+  }
+}
+
+.neon-title {
+  font-family: $f-title !important;
+  font-weight: normal;
+  color: lighten(#f6981aff, 50%);
+  text-shadow: 0 0 20px $c-dist, 0 0 30px $c-dist, 0 0 40px $c-dist,
+    0 0 70px $c-dist, 0 0 80px $c-dist, 0 0 100px $c-dist, 0 0 150px $c-dist;
+  letter-spacing: 2px;
+
+  &.--lite {
+    text-shadow: 0 0 20px $c-dist, 0 0 30px $c-dist, 0 0 40px $c-dist,
+      0 0 70px $c-dist;
+  }
+
+  .neon {
+    will-change: opacity;
+
+    &.blinker {
+      animation: blinker linear infinite;
+
+      &.blinker_1 {
+        animation-duration: random_range(1s, 11s);
+      }
+
+      &.blinker_2 {
+        animation-duration: random_range(2s, 8s);
+      }
+    }
+
+    &.flicker {
+      animation: flicker linear infinite random_range(2s, 3s);
+    }
+  }
+
+  @keyframes blinker {
+    70% {
+      opacity: 1;
+    }
+    79% {
+      opacity: 0;
+    }
+    81% {
+      opacity: 1;
+    }
+    82% {
+      opacity: 0;
+    }
+    83% {
+      opacity: 1;
+    }
+    92% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes flicker {
+    20% {
+      opacity: 1;
+    }
+    80% {
+      opacity: 0.8;
+    }
+  }
+}
+
 //? ---- GENERAL ---- ?//
 .header {
   position: absolute;
@@ -85,6 +184,10 @@ picture {
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  @include tabletSize {
+    display: none;
+  }
 
   &__wrapper {
     justify-content: center;
@@ -124,7 +227,7 @@ picture {
     width: 100vw;
     height: 100%;
 
-    background-image: url("https://images.unsplash.com/photo-1514361892635-6b07e31e75f9?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("https://images.unsplash.com/photo-1528100315649-ebfe49f792a6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -141,6 +244,7 @@ picture {
       content: "";
       top: 0;
       left: 0;
+      backdrop-filter: blur(5px);
 
       width: 100%;
       height: 100%;
@@ -172,7 +276,6 @@ picture {
 
     &__title {
       font-size: $f-size-xxxbig;
-      font-family: $f-title;
 
       @include responsiveSize(555px) {
         font-size: $f-size-xbig;
@@ -180,60 +283,6 @@ picture {
 
       @include phoneSize {
         font-size: $f-size-big;
-      }
-
-      color: lighten(#f6981aff, 50%);
-      text-shadow: 0 0 20px $c-dist, 0 0 30px $c-dist, 0 0 40px $c-dist,
-        0 0 70px $c-dist, 0 0 80px $c-dist, 0 0 100px $c-dist, 0 0 150px $c-dist;
-
-      .neon {
-        will-change: opacity;
-
-        &.blinker {
-          animation: blinker linear infinite;
-
-          &.blinker_1 {
-            animation-duration: random_range(1s, 11s);
-          }
-
-          &.blinker_2 {
-            animation-duration: random_range(2s, 8s);
-          }
-        }
-
-        &.flicker {
-          animation: flicker linear infinite random_range(0.5s, 2s);
-        }
-      }
-
-      @keyframes blinker {
-        70% {
-          opacity: 1;
-        }
-        79% {
-          opacity: 0;
-        }
-        81% {
-          opacity: 1;
-        }
-        82% {
-          opacity: 0;
-        }
-        83% {
-          opacity: 1;
-        }
-        92% {
-          opacity: 1;
-        }
-      }
-
-      @keyframes flicker {
-        20% {
-          opacity: 1;
-        }
-        80% {
-          opacity: 0.8;
-        }
       }
     }
 
@@ -249,11 +298,15 @@ picture {
         font-size: $f-size-xnormal;
 
         @include phoneSize {
-          font-size: $f-size-normal;
+          display: none;
         }
 
         &.main {
           color: $c-dist;
+
+          @include phoneSize {
+            display: flex;
+          }
         }
       }
     }
@@ -264,46 +317,152 @@ picture {
       gap: 0.25rem;
 
       &__btn {
-        padding: 0.75rem 1.25rem;
-        margin-top: 0.5rem;
-
-        border-radius: 2rem;
-        border: 2px solid transparentize($c-main-dark, 0.9);
-
-        background-color: transparentize($c-main-dark, 0.5);
-
-        font-size: $f-size-normal;
-        color: $c-white;
-
-        transition: 0.3s;
-
-        display: flex;
-        align-items: center;
-        gap: 0.5rem;
-
-        &:hover {
-          background-color: transparentize($c-main-dark, 0.15);
-        }
-
         @include phoneSize {
           display: none;
-        }
-
-        &.main {
-          background-color: transparentize($c-dist, 0.5);
-
-          @include phoneSize {
-            display: flex;
-          }
-
-          &:hover {
-            background-color: transparentize($c-dist, 0.15);
-          }
         }
 
         .icon {
           font-size: $f-size-xnormal;
         }
+
+        &.--main{
+          @include phoneSize {
+            display: flex;
+          }
+        }
+      }
+    }
+  }
+}
+
+.random {
+  width: 100%;
+  padding: 3rem 0;
+
+  background-color: transparent;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+
+  &__title {
+    font-size: $f-size-big;
+    text-align: center;
+
+    @include phoneSize {
+      font-size: $f-size-xlarge;
+    }
+  }
+
+  &__button {
+    padding: 0.5rem 0.75rem;
+  }
+
+  .cocktail {
+    width: min(700px, calc(100% - 2rem));
+
+    @include tabletSize {
+      padding: 0 0.5rem;
+    }
+
+    font-family: $f-main;
+
+    overflow: hidden;
+
+    display: flex;
+    gap: 1rem;
+
+    @include tabletSize {
+      flex-direction: column-reverse;
+    }
+
+    &__image {
+      width: 350px;
+
+      @include tabletSize {
+        width: 250px;
+        margin: 0 auto;
+      }
+
+      overflow: hidden;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+
+      img {
+        position: relative;
+        width: 100%;
+        max-width: 100%;
+
+        border-radius: 0.25rem;
+
+        z-index: 1;
+
+        filter: blur(2px);
+        transition: 0.3s ease-in-out;
+
+        @include tabletSize {
+          filter: blur(0px);
+        }
+      }
+
+      p {
+        color: transparentize($c-white, 0.75);
+      }
+    }
+
+    &__title {
+      color: $c-dist;
+      font-size: $f-size-large;
+      line-height: 2.25rem;
+      margin-bottom: 0.5rem;
+
+      @include tabletSize {
+        font-size: $f-size-xnormal;
+      }
+    }
+
+    &__ingredients {
+      margin: 0.25rem 0 0.75rem 0;
+      display: flex;
+      gap: 0.25rem;
+
+      .ingredient {
+        padding: 0.15rem 0.5rem;
+        border-radius: 1rem;
+
+        border: 1px solid $c-main-alt;
+        background-color: transparentize($c-main, 0.5);
+
+        font-size: $f-size-small;
+        color: $c-white;
+
+        cursor: pointer;
+
+        transition: 0.3s;
+
+        &:hover {
+          background-color: $c-main;
+        }
+      }
+    }
+
+    &__description {
+      color: $c-white;
+
+      @include tabletSize {
+        font-size: $f-size-small;
+      }
+    }
+
+    &:hover {
+      .cocktail__image img {
+        -webkit-filter: blur(0);
+        filter: blur(0);
       }
     }
   }
