--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: "NotoSans";
   src: local("NotoSans"),
-    url("../assets/fonts/NotoSans/NotoSans-Regular.ttf") format("truetype");
+    url("fonts/NotoSans/NotoSans-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "NeonRetro";
   src: local("NeonRetro"),
-    url("../assets/fonts/NeonRetro/NeonRetro-Regular.otf") format("opentype");
+    url("fonts/NeonRetro/NeonRetro-Regular.otf") format("opentype");
 }
 
 //? ---- COLORS ----
