--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -15,6 +15,7 @@ $c-main-dark: #250507ff;
 $c-main: #891e25ff;
 $c-main-alt: #ba312cff;
 $c-dist: #f6a91a;
+$c-dist-alt: #8b4f1e;
 $c-white: #f5f5f5ff;
 $c-black: #1d000dff;
 
@@ -33,6 +34,7 @@ $f-size-xbig: 4rem;
 $f-size-big: 3rem;
 $f-size-xlarge: 2.5rem;
 $f-size-large: 2rem;
+$f-size-xxnormal: 1.5rem;
 $f-size-xnormal: 1.25rem;
 $f-size-normal: 1rem;
 $f-size-small: 0.75rem;
