--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -329,11 +329,12 @@ picture {
 
 //? ---- GENERAL ---- ?//
 .header {
-  position: absolute;
+  position: fixed;
 
   width: 100%;
-
   padding: 0.5rem;
+
+  background-color: $c-black;
 
   color: $c-white;
 
@@ -358,6 +359,7 @@ picture {
     }
 
     &__item {
+      position: relative;
       padding: 0.25rem 0.5rem;
       color: $c-dist;
       font-size: $f-size-normal;
@@ -367,10 +369,29 @@ picture {
 
       transition: 0.3s;
 
+      z-index: 1;
+
+      display: flex;
+      justify-content: center;
+
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+
+        width: 0;
+        height: 2px;
+        background-color: $c-dist;
+        transition: 0.2s;
+
+        z-index: 2;
+      }
+
       &:hover,
       &:focus {
-        border-color: transparentize($c-dist, 0.8);
-        background-color: transparentize($c-dist, 0.7);
+        &::before {
+          width: 100%;
+        }
       }
     }
   }
@@ -523,11 +544,11 @@ picture {
   }
 
   .cocktail {
-    width: min(700px, calc(100% - 2rem));
+    width: min(500px, calc(100% - 2rem));
     padding: 0.5rem;
 
     @include tabletSize {
-      padding: 0 0.5rem;
+      padding: 0 0.5rem 1rem 0.5rem;
     }
 
     border-radius: 0.5rem;
