--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -345,7 +345,7 @@ picture {
   justify-content: space-between;
 
   @include tabletSize {
-    display: none;
+    // display: none;
   }
 
   &__wrapper {
@@ -548,7 +548,7 @@ picture {
     padding: 0.5rem;
 
     @include tabletSize {
-      padding: 0 0.5rem 1rem 0.5rem;
+      padding: 1rem 0.5rem;
     }
 
     border-radius: 0.5rem;
@@ -581,6 +581,7 @@ picture {
       position: relative;
       min-width: 250px;
       width: 350px;
+      margin: 0 auto;
       border: 0.5rem;
 
       @include tabletSize {
@@ -600,6 +601,8 @@ picture {
       img {
         width: 100%;
         max-width: 100%;
+
+        margin: 0 auto;
 
         border-radius: 0.5rem;
 
@@ -812,7 +815,232 @@ picture {
   }
 }
 
-.liquors {
-  width: 100vw;
-  height: 100vh;
+.cocktailDetail {
+  width: 100%;
+  padding: 3rem 1rem 1rem 1rem;
+
+  background-color: transparent;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  .cocktail {
+    width: min(1024px, calc(100% - 2rem));
+    padding: 0.5rem 1.5rem;
+
+    @include tabletSize {
+      padding: 1rem;
+    }
+
+    @include phoneSize {
+      width: calc(100%);
+      padding: 0.5rem;
+    }
+
+    border-radius: 0.5rem;
+    background-color: transparentize($c-main, 0.5);
+    border: 1px solid transparentize($c-main, 0.25);
+
+    font-family: $f-main;
+
+    transition: 0.3s;
+
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+
+    @include screenSize {
+      flex-direction: column;
+    }
+
+    @include phoneSize {
+      gap: 0.25rem;
+    }
+
+    &__wrapper {
+      max-width: 100%;
+    }
+
+    &__image {
+      position: relative;
+      min-width: 350px;
+      width: 500px;
+      border: 0.5rem;
+
+      @include tabletSize {
+        width: min(350px, 100%);
+        min-width: 0px;
+        margin: 0 auto;
+      }
+
+      overflow: hidden;
+
+      z-index: 1;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+
+      img {
+        width: 100%;
+        max-width: 100%;
+
+        border-radius: 0.5rem;
+
+        z-index: 1;
+
+        filter: blur(0);
+        transition: 0.3s ease-in-out;
+      }
+
+      p {
+        position: absolute;
+        bottom: 0.35rem;
+        left: 0.35rem;
+
+        font-size: $f-size-small;
+        color: transparentize($c-white, 0.5);
+
+        z-index: 2;
+      }
+    }
+
+    &__title {
+      color: $c-dist;
+      font-size: $f-size-large;
+      line-height: 2.25rem;
+      margin-bottom: 0.5rem;
+
+      @include tabletSize {
+        font-size: $f-size-xnormal;
+      }
+    }
+
+    &__sec {
+      margin-bottom: 0.5rem;
+
+      display: flex;
+      flex-direction: column;
+
+      h4 {
+        font-size: $f-size-xnormal;
+        color: transparentize($c-dist, 0.15);
+      }
+
+      p,
+      li {
+        font-size: $f-size-normal;
+        color: transparentize($c-white, 0.15);
+      }
+
+      .ingredients {
+        &__list {
+          padding: 0.5rem;
+          display: flex;
+          flex-wrap: wrap;
+          gap: 0.5rem;
+
+          @include phoneSize {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+          }
+
+          .ingredient {
+            padding: 0.5rem 0.25rem;
+
+            border-radius: 1rem;
+            border: 1px solid $c-main-alt;
+            background-color: transparentize($c-main, 0.85);
+
+            font-size: $f-size-small;
+            color: transparentize($c-white, 0.5);
+
+            cursor: pointer;
+
+            display: flex;
+            align-items: center;
+            flex-direction: column-reverse;
+
+            img {
+              width: 115px;
+
+              @include tabletSize {
+                width: 75px;
+              }
+            }
+
+            &:hover {
+              background-color: transparentize($c-main, 0.75);
+            }
+          }
+        }
+      }
+
+      .measures {
+        &__list {
+          padding-left: 3rem;
+
+          .measure {
+            list-style: disc;
+          }
+        }
+      }
+    }
+
+    .badges {
+      margin-bottom: 1rem;
+
+      display: flex;
+      gap: 0.25rem;
+
+      &__item {
+        padding: 0.15rem 0.5rem;
+        border-radius: 1rem;
+
+        border: 1px solid $c-main-alt;
+        background-color: transparentize($c-main, 0.85);
+
+        font-size: $f-size-small;
+        color: $c-white;
+
+        cursor: pointer;
+
+        transition: 0.3s;
+
+        &:hover {
+          background-color: transparentize($c-main, 0.75);
+        }
+      }
+    }
+  }
+}
+
+.footer {
+  min-height: 5rem;
+  
+  padding: 3rem 1rem 1rem 1rem;
+
+  font-family: $f-main;
+  font-size: $f-size-small;
+
+  color: $c-dist;
+
+  &__wrapper {
+    max-width: 968px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__copy {
+    padding-top: 5rem;
+
+    text-align: center;
+
+    a {
+      color: $c-dist;
+    }
+  }
 }
