--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -65,7 +65,8 @@ picture {
 }
 
 .section {
-  min-height: 100vh;
+  min-height: calc(100vh - 1.5rem);
+  padding: 5rem 0;
 
   @include phoneSize {
     width: calc(100% - 2rem);
@@ -516,163 +517,7 @@ picture {
   }
 }
 
-.random {
-  width: 100%;
-  padding: 3rem 0;
-
-  background-color: transparent;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 1rem;
-
-  &__title {
-    font-size: $f-size-big;
-    text-align: center;
-
-    cursor: pointer;
-
-    @include phoneSize {
-      font-size: $f-size-xlarge;
-    }
-  }
-
-  &__button {
-    padding: 0.5rem 0.75rem;
-  }
-
-  .cocktail {
-    width: min(500px, calc(100% - 2rem));
-    padding: 0.5rem;
-
-    @include tabletSize {
-      padding: 1rem 0.5rem;
-    }
-
-    border-radius: 0.5rem;
-    background-color: transparentize($c-main, 0.5);
-    border: 1px solid transparentize($c-main, 0.25);
-
-    font-family: $f-main;
-
-    cursor: pointer;
-
-    transition: 0.3s;
-
-    display: flex;
-    gap: 1rem;
-
-    @include tabletSize {
-      flex-direction: column-reverse;
-    }
-
-    &:hover {
-      background-color: transparentize($c-main, 0.55);
-
-      .cocktail__image img {
-        filter: blur(2px);
-        transform: scale(1.1);
-      }
-    }
-
-    &__image {
-      position: relative;
-      min-width: 250px;
-      width: 350px;
-      margin: 0 auto;
-      border: 0.5rem;
-
-      @include tabletSize {
-        width: 250px;
-        margin: 0 auto;
-      }
-
-      overflow: hidden;
-
-      z-index: 1;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-
-      img {
-        width: 100%;
-        max-width: 100%;
-
-        margin: 0 auto;
-
-        border-radius: 0.5rem;
-
-        z-index: 1;
-
-        filter: blur(0);
-        transition: 0.3s ease-in-out;
-      }
-
-      p {
-        position: absolute;
-        bottom: 0.35rem;
-        left: 0.35rem;
-
-        font-size: $f-size-small;
-        color: transparentize($c-white, 0.5);
-
-        z-index: 2;
-      }
-    }
-
-    &__title {
-      color: $c-dist;
-      font-size: $f-size-large;
-      line-height: 2.25rem;
-      margin-bottom: 0.5rem;
-
-      @include tabletSize {
-        font-size: $f-size-xnormal;
-      }
-    }
-
-    &__ingredients {
-      margin: 0.25rem 0 0.75rem 0;
-      display: flex;
-      gap: 0.25rem;
-
-      .ingredient {
-        padding: 0.15rem 0.5rem;
-        border-radius: 1rem;
-
-        border: 1px solid $c-main-alt;
-        background-color: transparentize($c-main, 0.5);
-
-        font-size: $f-size-small;
-        color: $c-white;
-
-        cursor: pointer;
-
-        transition: 0.3s;
-
-        &:hover {
-          background-color: $c-main;
-        }
-      }
-    }
-
-    &__description {
-      color: $c-white;
-
-      @include tabletSize {
-        font-size: $f-size-small;
-      }
-    }
-  }
-}
-
 .cocktails {
-  padding: 3rem 0;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -848,7 +693,7 @@ picture {
     transition: 0.3s;
 
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     gap: 1.5rem;
 
     @include screenSize {
@@ -938,7 +783,7 @@ picture {
 
       .ingredients {
         &__list {
-          padding: 0.5rem;
+          padding: 0.5rem 0.5rem 0.5rem 0;
           display: flex;
           flex-wrap: wrap;
           gap: 0.5rem;
@@ -1019,14 +864,17 @@ picture {
 }
 
 .footer {
-  min-height: 5rem;
-  
-  padding: 3rem 1rem 1rem 1rem;
+  height: 1.5rem;
+  padding: 0 1rem;
 
   font-family: $f-main;
   font-size: $f-size-small;
 
   color: $c-dist;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   &__wrapper {
     max-width: 968px;
@@ -1035,8 +883,6 @@ picture {
   }
 
   &__copy {
-    padding-top: 5rem;
-
     text-align: center;
 
     a {
